...
        }
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                Button(action: openSettings, label: {
                    Image(systemName: "gearshape")
                })
                .accessibilityIdentifier("settingsButton")
            }
        }
        .frame(minWidth: LayoutConstants.mainWindowMinWidth, minHeight: LayoutConstants.mainWindowMinHeight)
        .onAppear {
            sourceFilterSelection = SourceFilterSelection(allApps: Set(sourceApps))
            if CommandLine.arguments.contains("--UITEST_AUTO_SELECT_FIRST") {
...
